# neovim-spotify

./: .env  Cargo.toml  install.sh
src/: neovim.rs  spotify.rs
